nobody saw that coming (start expanding API work on 1.21.1, other versions as soon as that's done)